# ctm_mpt_for_ubuntu

./: .gitignore  readme.md
ctm_mpt_image/: CMakeLists.txt  package.xml
ctm_mpt_image/launch/: ctm_mpt.rviz  ctm_mpt_rss.rviz  ctm_mpt_rviz.launch  image.launch
ctm_mpt_image/meshes/: Seg.stl  SegHead.stl  UnvJnt.stl
ctm_mpt_image/urdf/: ctm_mpt.xacro
ctm_mpt_kernal/: CMakeLists.txt  CMakeLists_abnormal.txt  package.xml
ctm_mpt_kernal/include/: ctm_mpt.h  ctm_mpt2.h  kinematics.h  tcp_client.h  utils.h
ctm_mpt_kernal/launch/: client_test.launch  kernal.launch  plotter.perspective
ctm_mpt_kernal/log/: PUTC.txt  log-0606-001.csv  log-0606-002.csv  log-0606-003.csv  log-0606-004.csv  log-0606-005.csv  log-0606-006.csv  log-0606-007.csv  log-0606-008.csv  log-0606-009.csv  log-0606-010.csv  log-0606-011.csv  log-0606-012.csv  log-0923-001.csv  log-0924-000.csv  log-0924-001.csv  log-0924-004.csv  log-0924-006.csv  log-0926-001.csv  log-0926-002.csv  log-0926-003.csv  log-0927-001.csv  log-0927-004.csv  log-0928-001.csv  log-0928-003-2.csv  log-0928-004.csv  log-0929-001-2.csv  log-0929-001-3.csv  log-1001-001.csv  log-1002-001-2.csv  log-1002-001-3.csv  log-1002-001-4.csv  log-1006-001.csv  log-1006-002.csv  log-1007-003-2.csv  log-1007-003-3.csv  log-1007-003-4.csv  log-1008-003-1-2.csv  log-1010-004-1.csv  log-1010-004-3.csv  (+51 more)
ctm_mpt_kernal/log2023/: log-0924-002.csv  log-0924-003.csv  log-0924-004-2.csv  log-0924-005.csv  log-0926-004.csv  log-0927-002.csv  log-0927-003.csv  log-0928-002.csv  log-0928-003.csv  (+56 more)
vrpn_client_ros/: CMakeLists.txt
(+104 files in other folders)
