<?xml version="1.0"?>
<package format="2">
  <name>ctm_mpt_image</name>
  <version>0.0.0</version>
  <description>Image of the continuum manipulator</description>
  <maintainer email="ke.qiu@zju.edu.cn">Ellipse</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <export>
  </export>
</package>
